--- a/include/views/default/cockpit2/frontend/customers/customers-customer.phtml
+++ b/include/views/default/cockpit2/frontend/customers/customers-customer.phtml
@@ -11,14 +11,14 @@
 
 	<div class="divider"></div>
 	<br>
-	
+
 	<div ng-if="!loading">
-		
+
 		<div class="support-boxes">
 			<div ng-if="!customer.id_user" class="support-box-wrap">
 				<h1>Invalid Customer</h1>
 			</div>
-		
+
 			<div ng-if="customer.id_user" class="support-box-wrap">
 				<h1>Details</h1>
 				<div class="box-content-color">
@@ -40,7 +40,7 @@
 			</div>
 		</div>
 
-		<h1 class="title"><i class="fa fa-car"></i>Orders<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>		
+		<h1 class="title"><i class="fa fa-car"></i>Orders<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
 
 		<div class="box-content2 box-content-table">
 			<table class="tb-zebra">
@@ -68,7 +68,7 @@
 				</tr>
 			</table>
 		</div>
-		
+
 		<table class="tb-pagination right" ng-if="pages > 1" page-key>
 			<tbody>
 				<tr>
@@ -78,15 +78,40 @@
 				</tr>
 			</tbody>
 		</table>
-		
+
 		<div class="divider"></div>
-		
-		
-		
-		
-		
-		
-	
+
+		<div ng-if="customer.id_user" class="support-box-wrap">
+			<div class="box-content-color">
+				<div class="field-container">
+					<div class="field-row">
+						<div class="field-key">
+							<a href="/orders?search=phone:{{customer.phone}}">
+								Orders from this customer
+							</a>
+						</div>
+						<div class="field-value">
+							<a href="/orders?search=phone:{{customer.phone}}">
+								{{customer.orders_from_this_phone}}
+							</a>
+						</div>
+					</div>
+					<div class="field-row">
+						<div class="field-key">
+							<a href="/orders?search=customer:{{customer.id_user}}">
+								Orders from this number
+							</a>
+						</div>
+						<div class="field-value">
+							<a href="/orders?search=customer:{{customer.id_user}}">
+								{{customer.orders_from_this_customer}}
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 
 </div>
