--- a/include/views/default/cockpit/support/support.phtml
+++ b/include/views/default/cockpit/support/support.phtml
@@ -370,5 +370,5 @@ function linkOrder(){
 		border: 1px solid #CCC;
 	}
 </style>
-<script type="text/javascript" src="/assets/js/admin.js?v=<?php echo Cana_Util::gitVersion()?>"></script>
-<script type="text/javascript" src="/assets/js/admin.support.js?v=<?php echo Cana_Util::gitVersion()?>"></script>
+<script type="text/javascript" src="/assets/js/admin.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script type="text/javascript" src="/assets/js/admin.support.js?v=<?=Deploy_Server::currentVersion()?>"></script>
