--- a/include/views/default/cockpit2/bundle/css.phtml
+++ b/include/views/default/cockpit2/bundle/css.phtml
@@ -1,12 +1,12 @@
-<link rel="stylesheet" type="text/css" href="/assets/cockpit/scss/cockpit.scss?v=<?=Cana_Util::gitVersion()?>">
-<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/ladda.min.css?v=<?=Cana_Util::gitVersion()?>">
-<link rel="stylesheet" type="text/css" href="/assets/css/magnific-popup.css?v=<?=Cana_Util::gitVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/cockpit/scss/cockpit.scss?v=<?=Deploy_Server::currentVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/ladda.min.css?v=<?=Deploy_Server::currentVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/css/magnific-popup.css?v=<?=Deploy_Server::currentVersion()?>">
 
 <? if ($this->export && $this->isIOS) : ?>
-	<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/phonegap.ios.css?v=<?=Cana_Util::gitVersion()?>">
+	<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/phonegap.ios.css?v=<?=Deploy_Server::currentVersion()?>">
 <? endif ; ?>
 <? /*
-<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/bootstrap.css?v=<?=Cana_Util::gitVersion()?>">
-<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/dashio.css?v=<?=Cana_Util::gitVersion()?>">
-<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/dashio.responsive.css?v=<?=Cana_Util::gitVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/bootstrap.css?v=<?=Deploy_Server::currentVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/dashio.css?v=<?=Deploy_Server::currentVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/cockpit/css/dashio.responsive.css?v=<?=Deploy_Server::currentVersion()?>">
 */?>
