--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -41,67 +41,67 @@
 <script src="/assets/js/jquery.autosize-min.js"></script>
 <script src="/assets/js/location.js"></script>
 
-<script src="/assets/cockpit/js/cockpit.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/cockpit.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 
-<script src="/assets/js/base.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/util.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/tokenizeCard.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/base.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/util.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/tokenizeCard.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Controllers -->
-<script src="/assets/cockpit/js/controllers.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.drivers.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.staff.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.settlement.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.restaurant.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.customer.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.support.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.ticket.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.call.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.deploy.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.order.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.config.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.community.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.pexcard.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.drivers.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.staff.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.settlement.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.restaurant.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.customer.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.maps.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.support.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.ticket.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.call.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.deploy.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.order.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.config.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.community.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.pexcard.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Filters -->
-<script src="/assets/js/filters.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/filters.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Directives -->
-<script src="/assets/js/directives.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/directives.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/directives.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/directives.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
-<script src="/assets/cockpit/js/angular-file-upload.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/angular-file-upload.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Services -->
-<script src="/assets/cockpit/js/service.navigation.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.account.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.driverorders.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.settlement.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.driver.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.config.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.navigation.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.account.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.driverorders.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.settlement.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.driver.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.config.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
-<script src="/assets/cockpit/js/service.preonboarding.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.driveronboarding.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.drivershifts.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.staff.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.community.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.restaurant.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.location.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.customer.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.support.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.ticket.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.call.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.heartbeat.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.push.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.notification.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.deploy.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.call.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.datetime.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.socket.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.order.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.view.list.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.pexcard.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.favico.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.preonboarding.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.driveronboarding.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.drivershifts.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.staff.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.community.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.restaurant.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.location.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.customer.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.support.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.ticket.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.call.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.heartbeat.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.push.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.notification.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.deploy.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.call.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.datetime.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.socket.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.order.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.view.list.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.maps.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.pexcard.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.favico.js?v=<?=Deploy_Server::currentVersion()?>"></script>
