--- a/include/views/default/crunchbutton/bundle/js.phtml
+++ b/include/views/default/crunchbutton/bundle/js.phtml
@@ -20,55 +20,55 @@
 
 ?>
 <? foreach ($scripts as $script) : ?>
-	<script src="/assets/js/<?=$script?>.js?v=<?=Cana_Util::gitVersion()?>"></script>
+	<script src="/assets/js/<?=$script?>.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <? endforeach ; ?>
 
-<script src="/assets/js/datetime.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/base.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/util.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/datetime.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/base.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/util.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
-<script src="/assets/js/orm.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/location.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/ab.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/community.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/restaurant.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/dish.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/option.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/category.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/notification.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/order.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/log.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/tokenizeCard.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/orm.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/location.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/ab.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/community.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/restaurant.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/dish.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/option.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/category.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/notification.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/order.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/log.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/tokenizeCard.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Controllers -->
-<script src="/assets/js/controllers.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/controller.cafe.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/controllers.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/controller.cafe.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Filters -->
-<script src="/assets/js/filters.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/filters.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Animations
-<script src="/assets/js/animations.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/animations.js?v=<?=Deploy_Server::currentVersion()?>"></script>
  -->
 
 <!-- AngularJS Directives -->
-<script src="/assets/js/directives.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/directives.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <!-- AngularJS Services -->
-<script src="/assets/js/services.account.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.navigation.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.restaurant.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.community.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.recommend.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.support.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.order.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.facebook.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.giftcard.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.position.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.cart.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.creditcard.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.referral.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/js/services.phonegap.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/js/services.account.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.navigation.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.restaurant.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.community.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.recommend.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.support.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.order.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.facebook.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.giftcard.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.position.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.cart.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.creditcard.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.referral.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/js/services.phonegap.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <script type="application/x-javascript">
 	addEventListener('touchstart',function(){}); addEventListener('load', function(event) {setTimeout(scrollTo, 80, 0, 1);}, false);
