--- a/include/views/default/cockpit/drivers/shift/status/index.phtml
+++ b/include/views/default/cockpit/drivers/shift/status/index.phtml
@@ -302,5 +302,5 @@ $( document ).ready( function(){
 	} );
 } );
 </script>
-<script type="text/javascript" src="/assets/js/admin.support.js?v=<?php echo Cana_Util::gitVersion()?>"></script>
-<script type="text/javascript" src="/assets/js/jquery.autosize-min.js?v=<?php echo Cana_Util::gitVersion()?>"></script>
+<script type="text/javascript" src="/assets/js/admin.support.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script type="text/javascript" src="/assets/js/jquery.autosize-min.js?v=<?=Deploy_Server::currentVersion()?>"></script>
