--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -1299,8 +1299,8 @@
 	</div>
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="/assets/js/admin_restaurant.js?v=<?php echo Cana_Util::gitVersion()?>"></script>
-<script type="text/javascript" src="/assets/js/intro.js?v=<?php echo Cana_Util::gitVersion()?>"></script>
+<script type="text/javascript" src="/assets/js/admin_restaurant.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script type="text/javascript" src="/assets/js/intro.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script>
 $( document ).ready( function(){
 	$('.modal-hour_override').click(function(e) {
