--- a/include/views/default/cockpit/support/index.phtml
+++ b/include/views/default/cockpit/support/index.phtml
@@ -140,4 +140,4 @@ $( function() {
 		border: 1px solid #CCC;
 	}
 </style>
-<script type="text/javascript" src="/assets/js/admin.support.js?v=<?php echo Cana_Util::gitVersion()?>"></script>
+<script type="text/javascript" src="/assets/js/admin.support.js?v=<?=Deploy_Server::currentVersion()?>"></script>
