--- a/include/views/default/crunchbutton/bundle/css.phtml
+++ b/include/views/default/crunchbutton/bundle/css.phtml
@@ -5,13 +5,13 @@
 
 ?>
 <? foreach ($style as $s) : ?>
-	<link rel="stylesheet" type="text/css" href="/assets/css/<?=$s?>.css?v=<?=Cana_Util::gitVersion()?>">
+	<link rel="stylesheet" type="text/css" href="/assets/css/<?=$s?>.css?v=<?=Deploy_Server::currentVersion()?>">
 <? endforeach ; ?>
 
-<link rel="stylesheet" type="text/css" href="/assets/css/style-animations.css?v=<?=Cana_Util::gitVersion()?>">
-<link rel="stylesheet" type="text/css" href="/assets/css/magnific-popup.css?v=<?=Cana_Util::gitVersion()?>">
-<link rel="stylesheet" type="text/css" href="/assets/css/ladda-themeless.min.css?v=<?=Cana_Util::gitVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/css/style-animations.css?v=<?=Deploy_Server::currentVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/css/magnific-popup.css?v=<?=Deploy_Server::currentVersion()?>">
+<link rel="stylesheet" type="text/css" href="/assets/css/ladda-themeless.min.css?v=<?=Deploy_Server::currentVersion()?>">
 
 <? if (strpos($_SERVER['HTTP_USER_AGENT'],'Windows') !== false) : ?>
-	<link rel="stylesheet" type="text/css" href="/assets/css/windows.css?v=<?=Cana_Util::gitVersion()?>">
+	<link rel="stylesheet" type="text/css" href="/assets/css/windows.css?v=<?=Deploy_Server::currentVersion()?>">
 <? endif ; ?>
