--- a/include/views/default/crunchbutton/layout/basic.phtml
+++ b/include/views/default/crunchbutton/layout/basic.phtml
@@ -1,7 +1,7 @@
 <?=$this->display('layout/html.top')?>
 
 <? if (c::config()->bundle) : ?>
-	<script src="/assets/js/bundle.js?v=<?=Cana_Util::gitVersion()?>"></script>
+	<script src="/assets/js/bundle.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <? else : ?>
 	<?=$this->display('bundle/js')?>
 <? endif ; ?>
