--- a/include/views/default/seven/layout/html.phtml
+++ b/include/views/default/seven/layout/html.phtml
@@ -10,7 +10,7 @@
 <script src="//js.balancedpayments.com/1.1/balanced.js"></script>
 
 <? if (c::config()->bundle) : ?>
-	<script src="/assets/js/bundle.js?v=<?=Cana_Util::gitVersion()?>&s=app"></script>
+	<script src="/assets/js/bundle.js?v=<?=Deploy_Server::currentVersion()?>&s=app"></script>
 <? else : ?>
 	<?=$this->display('bundle/js', ['set' => ['scripts' => ['app']]])?>
 <? endif ; ?>
