--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -1877,6 +1877,10 @@ h4.title{
 	font-size: 1.1em;
 }
 
+.column-info .customer-address{
+	font-size: 1.0em;
+	margin-top: .9em;
+}
 	.delivered .notMyOrder .row-status{
 		background-color: #d6d9dc;
 		color: #48494C;
