--- a/include/views/default/cockpit2/frontend/listview/listview-orders.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-orders.phtml
@@ -10,18 +10,52 @@
 			<th>Status</th>
 		</tr>
 		<tr ng-repeat="order in orders track by $index" ng-attr-tabindex="{{$index+1}}" tab-select="/order/{{order.id_order}}">
-			<td><a href="/order/{{order.id_order}}">{{order.id_order}}</td>
-			<td>{{order.date | localtime | timestamp | date:'MM/dd @ HH:mm'}}</td>
 			<td>
+				<?php /* Info */ ?>
+					<div>
+						<a href="/order/{{order.id_order}}">{{order.id_order}}</a>
+					</div>
+					<div class="link no-underline" ng-click="ticket( order.id_order, order.id_support );">
+						<i class="fa fa-comments-o"></i>
+						<span ng-if="!order.id_support"> Create </span>
+						<span ng-if="order.id_support"> View </span>
+						support ticket
+					</div>
+				<?php /* Info */ ?>
+			</td>
+			<td>
+				<?php /* Date */ ?>
+				{{order.date | localtime | timestamp | date:'MM/dd @ HH:mm'}}
+				<?php /* Date */ ?>
+			</td>
+			<td>
+				<?php /* Restaurant */ ?>
 				<a href="/restaurant/{{order._restaurant_permalink}}">{{order._restaurant_name}}</a><br>
 				<a href="/community/{{order._community_permalink}}" ng-if="!community">{{order._community_name}}</a>
+				<?php /* Restaurant */ ?>
 			</td>
-			<td><a href="/customer/{{order.id_user}}">{{order.name}}</a></td>
-			<td><a href="/staff/{{order.status.driver.id_admin}}">{{order.status.driver.name}}</a></td>
-			<td>${{order.final_price_plus_delivery_markup}}</td>
 			<td>
+				<?php /* Customer */ ?>
+					<div><a href="/customer/{{order.id_user}}">{{order.name}}</a></div>
+					<a href ng-click="callText(order.phone)">{{order.phone | formatPhone}}</a>
+				<?php /* Customer */ ?>
+			</td>
+			<td>
+				<?php /* Driver */ ?>
+					<div><a href="/staff/{{order.status.driver.id_admin}}">{{order.status.driver.name}}</a></div>
+					<div><strong>{{order.status.status}}</strong></div>
+				<?php /* Driver */ ?>
+			</td>
+			<td>
+				<?php /* Order */ ?>
+				${{order.final_price_plus_delivery_markup}}
+				<?php /* Order */ ?>
+			</td>
+			<td>
+				<?php /* Status */ ?>
 				<b>{{order.status.status}}</b><br>
 				<span ng-if="order.status"><span am-time-ago="order.status.date | localtime | timestamp"></span></span>
+				<?php /* Status */ ?>
 			</td>
 		</tr>
 	</table>
