--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -1176,7 +1176,7 @@
 					</div>
 				</div>
 			</div>
-
+<!--
 			<div class="admin-modal-item">
 				<div class="admin-modal-explanation">
 					Create a new <b>linked</b> copy of this dish in the same or another
@@ -1190,7 +1190,9 @@
 						copy &amp; link
 					</div>
 				</div>
-			</div><!--
+			</div>
+-->
+			<!--
 		<div class=admin-modal-item>
 			<div class=admin-modal-explanation>
 				Copy the options for this dish to another dish, and keep them linked (option names and prices stay synced).
