--- a/include/views/default/cockpit2/frontend/listview/listview-staff.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-staff.phtml
@@ -7,6 +7,8 @@
 			<th ng-if="!community">Community</th>
 			<th class="tb-center">Active</th>
 			<th class="tb-center">Working</th>
+			<th class="tb-center">Working Today</th>
+			<th class="tb-center">Pex Card</th>
 			<th> </th>
 		</tr>
 		<tr ng-repeat="s in staff track by $index" ng-attr-tabindex="{{$index+4}}" tab-select="/staff/{{s.login}}">
@@ -23,6 +25,12 @@
 			</td>
 			<td class="tb-center">
 				<span ng-if="s.working"><i class="fa fa-check"></i></span>
+			</td>
+			<td class="tb-center">
+				<span ng-if="s.working_today"><i class="fa fa-check"></i></span>
+			</td>
+			<td class="tb-center">
+				<span ng-if="s.pexcard"><i class="fa fa-check"></i></span>
 			</td>
 			<td><a href="/staff/{{s.login}}/payinfo">Pay Info</a></td>
 		</tr>
