--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -1417,13 +1417,13 @@ input {
 	font-weight: bold;
 }
 .positive{
-	color: #64763d;
+	color: #64763d !important;
 }
 .negative{
-	color: #ad4442;
+	color: #ad4442 !important;
 }
 .neutral{
-	color: #CCC;
+	color: #CCC !important;
 }
 	.summary{
 		font-weight: bold;
