--- a/include/views/default/cockpit2/frontend/pexcard/pexcard.phtml
+++ b/include/views/default/cockpit2/frontend/pexcard/pexcard.phtml
@@ -5,6 +5,7 @@
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr><td><a href="/pexcard/card">Assign Pex Card to Driver</a></td></tr>
+			<tr><td><a href="/pexcard/log">Transactions log</a></td></tr>
 			<tr><td><a href="/pexcard/report">Pex Card Report</a></td></tr>
 		</table>
 	</div>
