--- a/include/views/default/cockpit2/frontend/pexcard/pexcard.phtml
+++ b/include/views/default/cockpit2/frontend/pexcard/pexcard.phtml
@@ -7,6 +7,7 @@
 			<tr><td><a href="/pexcard/card">Assign Pex Card to Driver</a></td></tr>
 			<tr><td><a href="/pexcard/log">Transactions log</a></td></tr>
 			<tr><td><a href="/pexcard/report">Pex Card Report</a></td></tr>
+			<tr><td><a href="/pexcard/card/log">Card Activations Log</a></td></tr>
 		</table>
 	</div>
 </div>
